# bioparsers

./: .gitignore  CLAUDE.md  Makefile  README.md  environment.yml  pyproject.toml
data/: README.md
databases/: README.md
docs/: handoff.md  project_context.md  troubleshooting.md
docs/.claude_sessions/: handoff.md
outputs/: README.md
recipes/: README.md  _pfam_runner.py  build_legacy_dataset.py  build_pfam_caption_fields_by_pfam.py  build_pfam_legacy_by_pfam.py  build_supplement_caption_fields.py  build_supplement_legacy.py  build_swissprot_caption_fields_by_pfam.py  build_swissprot_demo_fields_by_pfam.py  build_swissprot_legacy_by_pfam.py  build_uniprot_by_pfam_fields_demo.py  build_uniprot_by_pfam_flat_demo.py  concatenate_datasets.py
scripts/: README.md  parse_pfam_by_id.sh  parse_pfam_fasta.sh  parse_pfam_full.sh  parse_pfam_names.sh  parse_swissprot.sh  parse_trembl.sh  pfam_names_to_tsv.py
src/bioparsers/: __main__.py  main.py
src/bioparsers/builders/: __init__.py  base.py  concatenate.py  io.py  manifest.py
src/bioparsers/parsers/: __init__.py  base.py  csv_table.py  (+3 more)
tests/: conftest.py  test_cli.py  test_core.py
tests/_data/: pfam_families_mini.jsonl  pfam_mini.fasta  pfam_mini.hmm  pfam_mini.stockholm  supplement_mini.csv  uniprot_pfam_mini.jsonl
tests/builders/: conftest.py  test_base.py  test_builders.py  test_concatenate.py  test_io.py  test_legacy_dataset.py  test_manifest.py  test_recipes.py  test_supplement.py
tests/parsers/: test_base.py  test_csv_table.py  test_pfam_fasta.py  test_pfam_stockholm.py  test_uniprot_dat.py
(+63 files in other folders)
