[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bioparsers"
version = "0.0.1"
requires-python = ">= 3.12"
readme = "README.md"
description = "Parsers for biological reference databases, including UniProtKB Swiss-Prot and TrEMBL."
authors = [
  {name = "Addison Howe"},
]
dependencies = [
  "biopython>=1.83",
]

[project.scripts]
bioparsers = "bioparsers.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]
notebook = [
  "ipykernel",
  "ipywidgets",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["benchmark: mark test as benchmarking"]
